--- a/Writing/Sonar Glove.tex
+++ b/Writing/Sonar Glove.tex
@@ -50,7 +50,7 @@
 \\
 A Sonar Glove Assisting in Navigation for the Visually Impaired
 }
-\author{Neil Movva \\ Grade 11, The Harker School}
+\author{Neil Movva \\ Grade 12, The Harker School}
 % comment out the line below to show the current date
 % \date{}
 
@@ -62,7 +62,7 @@ A Sonar Glove Assisting in Navigation for the Visually Impaired
 
 \begin{abstract}
 
-test
+There is a dearth of technological solutions tailored to blind users. The author has attempted to address this need by designing, characterizing, and refining an assistive navigational device for the blind. Fundamentally, the device is a piece of wearable technology that incorporates an ultrasonic transceiver, a lightweight microcontroller, and a haptic interface to convey environmental information to the user. Additional sensors, such as an accelerometer, provide more contextual data that helps the device behave more naturally. This paper will discuss in detail the concepts underlying the device, as well as the considerations that go along with it, such as low-power design, optimal haptic feedback patterns, small footprint layout and manufacturing, etc.
 
 \end{abstract}
 
